[package]
name = "oml-storage-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/simple_disk_u32_main.rs"
name="simple_disk_u32"

[[bin]]
path="src/full_disk_u32_main.rs"
name="full_disk_u32"

[dependencies]
color-eyre = "0.6.3"
nanoid = "0.4.0"
oml-storage = "0.2.1-alpha"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
