[package]
name = "oml-storage-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/simple_disk_u32_main.rs"
name="simple_disk_u32"

[[bin]]
path="src/full_disk_u32_main.rs"
name="full_disk_u32"

[[bin]]
path="src/simple_dynamodb_u32_main.rs"
name="simple_dynamodb_u32"

[[bin]]
path="src/full_dynamodb_u32_main.rs"
name="full_dynamodb_u32"

[dependencies]
color-eyre = "0.6.3"
nanoid = "0.4.0"
oml-storage = { version = "0.4.1-alpha", features = ["metadata", "wipe"] }
## oml-storage = { version = "0.4.1-dev", path="../oml-storage", features = ["metadata", "wipe"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = [] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
